# Calliop

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  PLAN.md  README.md  SECURITY.md  index.html  overlay.html  package.json  pnpm-lock.yaml  vite.config.ts
.cursor/commands/: implement.md
.cursor/rules/: audio-pipeline.mdc  git-workflow.mdc  offline-constraint.mdc  rust-ts-conventions.mdc  testing-strategy.mdc
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/rulesets/: protect-main.json
.github/workflows/: ci.yml  release.yml
benchmarks/corpus/: fr.json
benchmarks/results/: v0.1.0.json
docs/: BENCHMARKS.md  branch-strategy.md  depannage.md  guide-utilisateur.md  installation.md  troubleshooting.md  user-guide.md
docs/plans/: 2026-06-12-dictation-cleanup-quality-design.md  2026-06-12-live-editing-design.md  2026-06-12-onboarding-tutorial-design.md
docs/superpowers/specs/: 2026-06-23-dictation-punctuation-llm-reliability-design.md  2026-06-23-llm-prompt-fidelity-design.md
locales/: en.json  fr.json
releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md
scripts/: build-llm-worker.ps1  check-locale-parity.mjs  dev.ps1  ensure-cmake.ps1  ensure-vulkan-sdk.ps1  generate-benchmark-corpus.ps1  patch-llama-cpp-vulkan-build.ps1  prepare-llm-sidecar.ps1  prepare-llm-sidecar.sh  tauri-cli.mjs  verify-updater-pubkey.mjs
src/: App.css  App.tsx  main.tsx  overlay.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.tauri/: calliop.key.pub
src-tauri/capabilities/: default.json
src-tauri/crates/calliop-llm-worker/: Cargo.toml
src-tauri/crates/calliop-llm-worker/src/: main.rs
src-tauri/crates/calliop-prompt/: Cargo.toml
src-tauri/crates/calliop-prompt/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: dictionary_notify.rs  lib.rs  main.rs  process_util.rs  system_notify.rs  update.rs  user_error.rs
src-tauri/src/achievements/: conditions.rs  definitions.rs  evaluator.rs  mod.rs  store.rs  types.rs
src-tauri/src/app_context/: detect_win.rs  matcher.rs  mod.rs
src-tauri/src/audio/: capture.rs  devices.rs  mod.rs  vad.rs
src-tauri/src/commands/: achievements.rs  app_context.rs  audio.rs  dictionary.rs  history.rs  mod.rs  models.rs  onboarding.rs  pipeline.rs  settings.rs  snippets.rs  update.rs
src-tauri/src/hotkey/: action.rs  capture.rs  capture_win.rs  dictation_hook_win.rs  mod.rs  modifiers.rs  shortcut.rs
src-tauri/src/inference/: mod.rs
src-tauri/src/inject/: injector.rs  mod.rs
src-tauri/src/llm/: client.rs  engine.rs  mod.rs  model.rs  prompt.rs
src-tauri/src/observe/: mod.rs  reader_stub.rs  reader_win.rs  region.rs  watcher.rs
src-tauri/src/pipeline/: corrections.rs  dictation.rs  mod.rs  orchestrator.rs  snippet_variables.rs  snippets.rs
src-tauri/src/store/: app_context.rs  db.rs  dictionary.rs  history.rs  mod.rs  settings.rs  snippets.rs
src-tauri/src/stt/: engine.rs  language.rs  mod.rs  model.rs  prompt_cache.rs  wer.rs
src-tauri/src/system/: capabilities.rs  mod.rs  profile.rs
src-tauri/src/ui/: locale.rs
src/components/achievements/: AchievementCard.tsx  AchievementHeroBand.tsx  AchievementLoadingSkeleton.tsx  AchievementStatusFilter.tsx  AchievementTabNav.tsx  AchievementUnlockQueue.tsx  AchievementsView.tsx  achievementTierStyles.ts  achievementUtils.ts
src/components/context/: ContexteView.tsx
src/components/dictionary/: DictionarySourceBadge.tsx  DictionaryTable.tsx  DictionaryView.tsx  DictionaryWordModal.tsx  dictionaryUtils.ts
src/components/history/: HistoryEntryRow.tsx  HistoryList.tsx  HistoryPagination.tsx  HistoryStatsBar.tsx  HistoryView.tsx  historyUtils.ts
src/components/icons/: NavIcons.tsx
src/components/insight/: AnimatedMetricValue.tsx  InsightTabNav.tsx  (+13 more)
src/contexts/: AchievementsContext.tsx
src/hooks/: useAchievements.ts  useAppContext.ts  useAppUpdate.ts  useAppVersion.ts  useDictionary.ts  useHistory.ts  useInputDevices.ts  useInsights.ts  useMicProbe.ts  useModelDownloads.ts  useOnboarding.ts  useOnboardingPractice.ts  usePipelineState.ts  useRefreshSpin.ts  useSettings.ts  useSnippets.ts  useSttLanguage.ts  useTranscriptCorrection.ts
src/i18n/: I18nProvider.tsx  index.ts  locale.ts  useUiLocale.ts
src/lib/: modelLabels.ts  translateError.ts  views.ts
src/styles/: globals.css  overlay.css  tokens.css
(+93 files in other folders)
