[package]
name = "calliop"
version = "0.1.0"
description = "Local voice dictation for any application"
authors = ["Calliop Contributors"]
edition = "2021"
default-run = "calliop"

[lib]
name = "calliop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
voice_activity_detector = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
whisper-rs = "0.16"
arboard = "3.4"
enigo = "0.3"
thiserror = "2"
hound = "3.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
dirs = "6"
parking_lot = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rusqlite = { version = "0.32", features = ["bundled"] }
llama-cpp-2 = { version = "0.1", optional = true }
encoding_rs = { version = "0.8", optional = true }

[features]
default = []
llm-worker = ["dep:llama-cpp-2", "dep:encoding_rs"]

[[bin]]
name = "calliop"
path = "src/main.rs"

[[bin]]
name = "test-audio"
path = "src/bin/test-audio.rs"

[[bin]]
name = "test-stt"
path = "src/bin/test-stt.rs"

[[bin]]
name = "test-inject"
path = "src/bin/test-inject.rs"

[[bin]]
name = "test-llm"
path = "src/bin/test-llm.rs"

[[bin]]
name = "calliop-llm-worker"
path = "src/bin/llm-worker.rs"
required-features = ["llm-worker"]
