[package]
name = "calliop-llm-worker"
version = "0.1.0"
edition = "2021"
description = "LLM sidecar process for Calliop auto-edits"

[[bin]]
name = "calliop-llm-worker"
path = "src/main.rs"

[dependencies]
calliop-prompt = { path = "../calliop-prompt" }
encoding_rs = "0.8"
llama-cpp-2 = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
