[package]
name = "calliop-llm-worker"
version = "0.1.1"
edition = "2021"
description = "LLM sidecar process for Calliop auto-edits"

[[bin]]
name = "calliop-llm-worker"
path = "src/main.rs"

[dependencies]
calliop-prompt = { path = "../calliop-prompt" }
encoding_rs = "0.8"
llama-cpp-2 = { version = "0.1", default-features = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
gpu = ["llama-cpp-2/vulkan"]
